kubernetes/uptime/svc-clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: uptime
  namespace: support
spec:
  type: ClusterIP
  selector:
    app: uptime
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
